--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                         </p>
                         <p class="">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Aliquam dolorum fugit, earum facere sequi dolorem voluptates
-                            impedit hic ipsum harum alias repellendus nobis expedita atque
-                            eum, repellat architecto? Magni, dolorum.
+                            Aliquam dolorum fugit, earum facere sequi 
                         </p>
+                        <h5 class="">
+                            The Commenting system is embedded here
+                        </5>
                     </div>
                 </section>
                 <div id="converse-app"></div>
