--- a/index.html
+++ b/index.html
@@ -45,19 +45,7 @@
 
                 <section class="section">
                     <div class="container" id="target">
-                        <p class="">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Aliquam dolorum fugit, earum facere sequi dolorem voluptates
-                            impedit hic ipsum harum alias repellendus nobis expedita atque
-                            eum, repellat architecto? Magni, dolorum.
-                        </p>
-                        <p class="">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Aliquam dolorum fugit, earum facere sequi 
-                        </p>
-                        <h5 class="">
-                            The Commenting system is embedded here
-                        </5>
+                        <h5>The Commenting system is embedded here</h5>
                     </div>
                 </section>
                 <div id="converse-app"></div>
